<resources>
    <string name="app_name">carBut</string>
    <string name="登录">登录</string>
    <string name="充电">充电</string>
    <string name="管理员">管理员</string>
    <string name="signInAccount">用户名</string>
    <string name="signInPassWord">密码</string>
    <string name="注册">注册</string>
    <string name="addCar">添加车辆</string>
    <string name="batterCap">电池容量</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="car">汽车管理</string>
    <string name="fastCharge">快充</string>
    <string name="slowCharge">慢充</string>
    <string name="carId">车号</string>
    <string name="chargeQuantity">充电量</string>
    <string name="charge">请求充电</string>
    <string name="queryInfo">查询状态</string>
    <string name="chargePileNumber">充电桩号</string>
    <string name="queryPileInfo">查询充电桩状态</string>
    <string name="openPile">启动充电桩</string>
    <string name="queryReportInfo">查询报表状态</string>
    <string name="is_work">是否正常工作</string>
    <string name="total_count">累计充电次数</string>
    <string name="total_time">充电总时长</string>
    <string name="total_quantity">充电总电量</string>
    <string name="head_id">当前ID</string>
    <string name="user_head_id">用户ID</string>
    <string name="user_car_id">车ID</string>
    <string name="user_car_capacity">电量</string>
    <string name="car_request_quantity">请求充电的大小</string>
    <string name="user_waiting_time">等待时间</string>
    <string name="report_time">时间</string>
    <string name="report_pile_id">充电桩ID</string>
    <string name="report_total_count">充电次数</string>
    <string name="report_total_time">累计充电时长</string>
    <string name="report_total_fee">累计充电费用</string>
    <string name="report_total_quantity">累计充电量</string>
    <string name="report_service_total_fee">累计服务费用</string>
    <string name="pile_total_fee">累计总费用</string>
    <string name="queryCarInfo">等待服务的车辆的信息</string>
</resources>