<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/head_id"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:text="@string/head_id"/>

    <TextView
        android:id="@+id/head_is_work"
        android:layout_width="48dp"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:layout_height="48dp"
        android:layout_margin="8dp"
    android:text="@string/is_work"/>

    <TextView
        android:id="@+id/head_total_count"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:text="@string/total_count"
        android:textAppearance="?attr/textAppearanceHeadline6"/>
    <TextView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:id="@+id/head_total_time"
        android:layout_margin="8dp"
        android:text="@string/total_time"
        android:textAppearance="?attr/textAppearanceHeadline6"/>
    <TextView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:id="@+id/head_total_quantity"
        android:layout_margin="8dp"
        android:text="@string/total_quantity"
        android:textAppearance="?attr/textAppearanceHeadline6"/>
</LinearLayout>