<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.software_engineer.ui.home.HomeFragment"
        android:label="@string/登录"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_charge"
        android:name="com.example.software_engineer.ui.charge.ChargeFragment"
        android:label="@string/充电"
        tools:layout="@layout/fragment_charge" />

    <fragment
        android:id="@+id/navigation_car"
        android:name="com.example.software_engineer.ui.car.CarFragment"
        android:label="@string/car"
        tools:layout="@layout/fragment_car" />
    <fragment
        android:id="@+id/navigation_admin"
        android:name="com.example.software_engineer.ui.admin.AdminFragment"
        android:label="@string/管理员"
        tools:layout="@layout/fragment_admin" />
</navigation>